# NCTDemo

./: CMakeLists.txt  README.md
src/: main.cpp
src/basis/: basis.cpp  basis.h
src/fem/: fem.cpp  fem.h
src/grid/: grid.cpp  grid.h
src/problem/: problem.cpp  problem.h
src/quadrule/: quadrule.cpp  quadrule.h
src3D/: main.cpp
src3D/basis/: basis.cpp  basis.h
src3D/fem/: fem.cpp  fem.h
src3D/grid/: grid.cpp  grid.h
src3D/quadrule/: quadrule.cpp  quadrule.h
